--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -1,1 +1,195 @@
+<script src="https://rawcdn.githack.com/oscarmorrison/md-page/master/md-page.js"></script><noscript>
+# aditya g 
+
+### *Fiduciary with a difference*
+
+#### SEBI Reg No: INA200011736
+
+---
+
+#### Number of Complaints (as on 31st March 2021)
+[Compliance Requirement As per SEBI circular [SEBI/HO/IMD/DF1/CIR/P/2019/169](https://www.sebi.gov.in/legal/circulars/dec-2019/measures-to-strengthen-the-conduct-of-investment-advisers-ia-_45490.html) dated December 27, 2019]
+
+|At the beginning of the month|	Received during the month|Resolved during the month|Pending at the end of the month|Reasons for pendency|
+|:---:|:---:|:---:|:---:|:---:|
+|0|0|0|0|N/A|
+
+---
+
+#### What is the meaning of *fiduciary*?
+
+**Fiduciary** is derived from the Latin word *fidere*, which means "to trust". In this case, the investment adviser (that's me) has the power and obligation to act for the beneficiary (that's you, or the client) under circumstances which require total *trust*, *good faith* and *honesty*.
+
+In simple English -- your interests come before mine.
+
+---
+
+## About Me ##
+
+My name is <b>Aditya</b> and I'm a Certified Financial Planner (CFP) and SEBI-Registered Investment Adviser (RIA).
+
+I'm a <i>fiduciary</i> and I help clients manage finances, investments, asset allocation, & life goals for a fee.
+
+---
+
+## Schedule an appointment ##
+
+Mail me at <b>INFO <i>[at]</i> PANTHERACAPITAL <i>[dot]</i> IN</b>
+
+---
+
+## Frequently Asked Questions ##
+
+**Why did you decide to become an investment adviser?**
+
+Three reasons.
+
+1. For years I've made decisions on investments & financial planning for myself & my family, and it worked pretty well. Now, I want to put my experience to good use -- to help YOU.
+
+2. Second, I strongly believe that being a fiduciary is the best way to help anyone. Just as doctors look your health, financial/investment adviser look after your financial well-being. Having more fiduciaries is good for consumers.
+
+3. Third, it is difficult to find a fiduciary. And, it's even more difficult to find a genuine advisor whose investment advice is tailored to the your specific needs.
+
+**Are you always a fiduciary, and will you state that in writing?**
+
+Yes. My relationship with you is purely fiduciary. The client’s best interest is the key driver of the fiduciary-client relationship. There’s no such thing as part-time fiduciary. Either one is in the fiduciary business, or not. And I’m in the fiduciary business.
+
+**Does anybody else ever pay you to recommend certain products or services?**
+
+No. That would be violation of SEBI regulations. I do not earn commissions on products, and I do not sell products. In order to buy financial products that will be suitable to you, I’ll be happy to recommend some good financial distributors.
+
+**What kind of advisory services do you offer?**
+
+I offer comprehensive financial planning and general financial advisory. The former is specific and targeted financial advice tailored specific to your needs. The latter is broad and covers the usual gamut of investment advisory.
+
+**Do you participate in any sales contests or award programs creating incentives to favour particular vendors?**
+
+No. Like I said earlier, I do not sell products. I’m in the fiduciary business.
+
+**How much do you charge for your services?**
+
+I charge one of the following fee models:
+
+1) Simple no-nonsense flat fee
+
+2) Maximum of 1% of Asset under Advisory (AuA)
+
+**Can I choose which fee model to opt for? And can you tell me what is offered under each?**
+
+Yes. You can.
+
+a) If you opt for flat fee model, the nature of advisory will be "unstructured" and broad. In other words, it will be GENERAL financial advisory that spans a range of queries you may have. You do not have to disclose your networth and details of your financial holdings. However, if you seek SPECIFIC wealth solutions, it is suggested you opt for AuA model.
+
+b) If you opt for AuA model, the nature of advisory will be "structured", SPECIFIC, and HOLISTIC. You will have to disclose an audited networth statement which will help me assess your financial wellbeing. Once assessed, I will prepare a comprehensive financial plan fine-tuned to your goals and aspirations. There will also be granular asset allocation and rebalancing, detailed investment policy statement, scenario planning, tax planning, behavioural coaching, and so on. There are a whole range of tools and system which I will deploy to help you become more aware and confident about your financial well being. All this requires committment from both you and me, and it's worth the effort.
+
+**I have met "advisors" who do not charge a fee. Can you tell me more about this?**
+
+It is likely you're referring to "distributors" such as bank relationship managers, mutual fund distributors, stock brokers (yes, they are "distributors" as well) etc. They often call themselves "advisors", which is a clever use of semantics, and one that is extremely misleading and dangerous! In fact, SEBI recently barred product distributors from calling themselves "advisors" or IFAs or RIAs or similar nomenclatures.
+
+**So, who are distributors?**
+
+They SELL financial products for "free", hence, they do not charge you directly. Instead, they earn COMMISSIONS on the products they sell from product orginators (i.e. mutual funds, PMS, AIFs, etc), instead of you. In other words, you are actually paying distributors vis-a-vis product originator, not directly to them! Distributors are NOT fiducaries. Remember, there is no such thing as free lunch!
+
+**Are your fees negotiable?**
+
+No. Typically, the fee is what you would pay to a skilled professional for specialised & holistic service. Investment/financial advisory is not a commodity product, it requires great skill & focus; it is a profession that requires a lot of time & patience. It is also a highly regulated profession in the same vein as medicine, law, or auditing, which ensures that there is a high degree of compliance and quality service. Besides, I choose to spend a valuable chunk of my time with clients who are willing to leverage my skill for their benefit. Besides, have you ever negotiated with a neurosurgeon?
+
+**What does the advisory process look like?**
+
+Good question! A lot of clients do not know what it looks like and it's important to know. Each client will require a different process & approach that's unique to their situation. It's akin to a doctor examining a patient to determine the appropriate procedure. Some clients will require more technical approach (that involves number crunching) while some will be more tactical/strategic. However, the overall process involves deep conversations about client's relationship with money, life goals & aspirations, and what issues client hopes to solve. However, goals & aspirations will keep changing every year (even as economic & market conditions keep changing), which is why it is recommended to keep advisors for the long term so that clients can recaliberate their goals and strategy.
+
+**Is there a minimum threshold required to be your client?**
+
+Yes. Transparency, effort, and willingness to pay for specialised service. Yet, before you become a client, we will assess each other to see if we can be a good fit. If a patient does not allow the doctor to diagnose the problem, the doctor cannot be expected to treat the patient. And the patient cannot expect the diagnosis to be free, nevermind the procedure (if any). The same principle applies in case of fiduciary-client relationship. The client will have to tell me the issues and I will assess if I can solve those. And must be willing to pay.
+
+**Can you tell me about your conflicts of interest, orally and in writing?**
+
+Of course. Every advisor, regardless of business model or form of compensation, will have some conflicts. My motivation is fairly simple: I want you to be my client for a long time, and pay me every year. I don’t care if you take money from your portfolio to buy something or invest elsewhere, because it is your prerogative and you decide what to do with your money. My job is to give you the best advice possible to achieve your goals & objectives, whether it is capital protection or wealth generation. My job is to aid your decision making and make it easier for you to execute your ideas to achieve your dreams and goals. I could scale up and generate more income, which is a potential conflict. But, at present, I like operating on my own, and looking after the interests of few cherished clients who come back to me every year because they value my advice. This approach works best for both clients and myself.
+
+**Do you earn fees as adviser to a private fund or other investments that you may recommend to clients?**
+
+I do not serve as an adviser to any third party product originator. I could recommend such products based on the client’s profile and check if the it is suitable to the client’s temperament and investment goals. However, I do not sell products or earn any commissions from any product originator. You will have to buy from a financial distributor.
+
+**Do you pay referral fees to generate new clients?**
+
+No. I have good relationships with many advisors, distributors, lawyers, chartered accountants, asset managers, and potential clients. Sometimes they might refer clients to me. Sometimes, I refer clients to them. But nothing is exchanged between us.
+
+**Do you earn fees for referring clients to specialists like estate attorneys or insurance agents?**
+
+As a fiduciary, if there is something that demands a greater attention to detail, which often would require a second opinion, particularly in specialised areas of law, property, or taxation, I will refer clients to a third party, say a specialised lawyer or advocate or chartered accountant, whom I feel will add value to the advisory and client. There could be a collaboration of sorts to help the client. However, nothing is exchanged between third parties and me. Remember, I'm a fiduciary!
+
+**What is your investment philosophy?**
+
+Each person’s investment philosophy is distinct and will depend on his/her personality, personal beliefs, and temperament. Mine is very simple – I personally believe that less is more; I believe in holding a concentrated portfolio of assets for long periods of time, which I believe can deliver exemplary returns; I believe one should rebalance their portfolios periodically in order to attune to the prevailing market and keep investment goals aligned; This being said, I also strongly believe in having an open mind to be receptive to different investment approaches, given the constant evolution the global economy, investment profession, and markets. Thus, it is essential to combine different approaches for your benefit. This is one of the hardest parts of investment advisory, and one that I enjoy the most.
+
+**Do you believe in technical analysis or market timing?**
+
+For some investors this approach works very well. While I'm mostly a fundamental investor, I believe there will be certain situations in the markets that will warrant technical analysis approach, given the right temperament. I have tried it a few times and it seems to work just fine. But I haven't tried it substantially enough to endorse it over other approaches. As far as market timing is considered, I believe in it because future returns is a function of how much you paid for an asset. If you buy an overpriced asset, the chances that your future returns will be less will be far greater, and vice versa.
+
+**Do you believe you can beat the market?**
+
+There are some investment managers who possess alpha, or market-beating skills, but it is incredibly difficult to beat the market for sustained periods of time. These investment managers are rare and difficult to spot well in advance. Inevitably, it boils down to timing & loads of luck. That being said, I do not believe in comparing one’s portfolio returns to the market returns, or anyone else's. While I believe in absolute positive returns, the true metric of investment performance is whether you are achieving your goals, preserving your capital, and whether you can sleep well at night.
+
+**How often do you trade?**
+
+I set aside a small corpus for trading purposes, for my own sanity and happiness. It keeps my grey cells busy. However, as part of my investment advisory, trading is something I do not really advise, unless one has a strong risk appetite and doesn't mind risking capital. If anyone wishes to trade, I would recommend starting off with a small corpus.
+
+**What software do you use?**
+
+Great advisors tend not to rely on software. A simple paper & pen does the job of reporting far better than any computer software (the so called 'napkin theory'), and this is my standard approach, because clients learn and understand better this way. Moreover, writing stuff down reinforces our brain and helps us process information far more effectively than a computer software. Needless, if you insist on using software then good financial management requires nothing more than a spreadsheet or any open source software. You do not need any fancy software to implement sound financial advice.
+
+**Which professional credentials do you have, and what are their requirements?**
+
+I have a Certified Financial Planner (CFP) designation, which is the gold standard for wealth management and financial planning, and one of the requirements of being a SEBI-registered Financial Adviser. Thus, there are strict compliance requirements with regards to both CFP designation as well as statutory rules prescribed by SEBI. I have also done my MBA with specialisation in finance & economics, and have completed several wealth management courses from institutes in New York.
+
+**After inflation, taxes and fees, what is a reasonable estimated return on my portfolio over the long term?**
+
+Of course, it depends. But most people should expect nominal (before-inflation) returns of 8-10% on a somewhat balanced portfolio. If you consider taxes & inflation, then you’ll end up somewhere around 5-6%. If you are conservative, you should expect something lower than this. If you are enterprising, you can expect something higher than this, but not without risks and many sleepless nights! However, it is pertinent to note that black-swan events have the capacity to completely change the narrative & numbers. And that's the whole point of comprehensive financial planning -- to prepare and take advantage of a wide-range of scenarios that might (or might not) happen in the future. Being prepared is half the battle won.
+
+**Who manages your money?**
+
+I do. Actually, I manage my entire family’s assets. It is reasonable to have assets managed by a third party, just to keep my biases in check. For this reason, I have diversified our various portfolios to different asset managers, each having their own unique philosophy. Additionally, a part of our portfolio is directly managed by me. This twin approach helps me achieve two objectives: the first approach helps me refine my own thought process which can help me service clients; the second approach helps me have the skin in the game. Both are absolutely critical for understanding the nature of financial advice.
+
+**Why is your website so plain?**
+
+My profession is that of a financial advisor, not a website designer (although I do have HTML/CSS/Front-end website skills). My job is to solve your financial problems and make you a smarter and confident investor -- period. Secondly, I love plain-text websites because they use less resources (which is good for the planet) and require less maintenance (so I can devote time to solving your problems instead of worrying about cosmetics). Lastly, I believe in simplicity. Simplicity is the backbone of my advisory and the reason people come to me. And this website reflects that.
+
+**How do I contact you?**
+
+Please do send me an email, which is mentioned at the top of this web page. Introduce yourself, tell me why you want me as your financial advisor, and the issues you hope to solve. We will have a discussion and see if we can be a good fit and work out something concrete.
+
+---
+
+####  Compliance Information
+
+##### SEBI Regional Office
+
+SEBI (Southern Regional Office)
+7th Floor, 756-L,
+Anna Salai,
+Chennai - 600002, Tamil Nadu
+
+Tel: +91-44- 28880222 / 28526686
+Fax: +91-44 -28880333
+Fax: sebisro@sebi.gov.in
+
+##### [SEBI SCORES](https://www.scores.gov.in/scores/Welcome.html)
+
+#### Principal Officer: Aditya G
+
+##### SEBI REG No: INA200011736
+
+---
+
+**Disclaimer for Website**
+
+The purpose of this website is to provide information only and the contents of this website do not constitute financial advice.
+
+Aditya will endeavour to update the website on a regular basis. However, information can change without notice and I do not guarantee the accuracy of information on the website, including information provided by third parties, at any particular time.
+
+The information is selective and may not be complete or accurate for your particular purposes and should not be construed as a recommendation to invest in any particular product, investment or security. The information provided on this website is given in good faith and is believed to be accurate at the time of compilation.
+
+Aditya does not give any warranty as to the accuracy, reliability or completeness of information which is contained in this website. Except insofar as any liability under statute cannot be excluded, Aditya does not accept any liability for any error or omission of any information on this website or for any resulting loss or damage suffered by the recipient or any other person.
+
+For your convenience, this website may contain hyperlinks to websites and servers maintained by third parties. Aditya does not control, evaluate, endorse or guarantee content found in those sites. Aditya does not assume any responsibility or liability for the actions, products, services and content of these sites or the parties that operate them. Your use of such sites is entirely at your own risk. Unless otherwise specified, copyright of information provided on this website is owned by Aditya. You may not alter or modify this information in any way.
 
