--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -70,7 +70,7 @@ No. Like I said earlier, I do not sell products. I’m in the fiduciary business
 
 I charge one of the following fee models:
 
-1) Simple no-nonsense flat fee
+1) Simple no-nonsense flat fee. The amount depends on the complexity of the client's requirements. The more complex, the higher the fees. Check the next question for more details. 
 
 2) Maximum of 1% of Asset under Advisory (AuA)
 
