--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -1,5 +1,5 @@
 <script src="https://rawcdn.githack.com/oscarmorrison/md-page/master/md-page.js"></script><noscript>
-# aditya g 
+# aditya g
 
 ### *Fiduciary with a difference*
 
@@ -70,7 +70,7 @@ No. Like I said earlier, I do not sell products. I’m in the fiduciary business
 
 I charge one of the following fee models:
 
-1) Simple no-nonsense flat fee. The amount depends on the complexity of the client's requirements. The more complex, the higher the fees. Check the next question for more details. 
+1) Simple no-nonsense flat fee. The amount depends on the complexity of the client's requirements. The more complex, the higher the fees. Check the next question for more details.
 
 2) Maximum of 1% of Asset under Advisory (AuA)
 
@@ -181,6 +181,100 @@ Fax: sebisro@sebi.gov.in
 
 ---
 
+#### Annexure A
+
+###### Investor Charter in respect of Investment Adviser (IA)
+
+##### A.	Vision and Mission Statements for investors
+Vision: Invest with knowledge & safety.
+Mission: Every investor should be able to invest in right investment products based on their needs, manage and monitor them to meet their goals, access reports and enjoy financial wellness.
+
+##### B.	Details of business transacted by the Research Analyst with respect to the investors.
+•	To enter into an agreement with the client providing all details including fee details, aspect of Conflict of interest disclosure and maintaining confidentiality of information.
+•	To do a proper and unbiased risk – profiling and suitability assessment of the client.
+•	To obtain registration with Know Your Client Registration Agency (KRA) and Central Know Your Customer Registry (CKYC).
+•	To conduct audit annually.
+•	To disclose the status of complaints in its website.
+•	To disclose the name, proprietor name, type of registration, registration number, validity, complete address with telephone numbers and associated SEBI regional/local Office details in its website.
+•	To employ only qualified and certified employees.
+•	To deal with clients only from official number
+•	To maintain records of interactions, with all clients including prospective clients (prior to onboarding), where any conversation related to advice has taken place.
+
+##### C.	Details of services provided to investors (No Indicative Timelines)
+•	Onboarding of Clients
+o Sharing of agreement copy
+o Completing KYC of clients
+•	Disclosure to Clients
+o To provide full disclosure about its business, affiliations, compensation in the agreement.
+o To not access client’s accounts or holdings for offering advice.
+o To disclose the risk profile to the client.
+•	To provide investment advice to the client based on the risk-profiling of the clients and suitability of the client.
+
+##### D.	Details of grievance redressal mechanism and how to access it
+i.	In case of any grievance / complaint, an investor should approach the concerned Investment Adviser and shall ensure that the grievance is resolved within 30 days.
+ii.	If the investor’s complaint is not redressed satisfactorily, one may lodge a complaint with SEBI on SEBI’s 'SCORES' portal which is a centralized web based complaints redressal system. SEBI takes up the complaints registered via SCORES with the concerned intermediary for timely redressal. SCORES facilitates tracking the status of the complaint.
+iii.	With regard to physical complaints, investors may send their complaints to: Office of Investor Assistance and Education, Securities and Exchange Board of India, SEBI Bhavan, Plot No. C4-A, ‘G’ Block, Bandra-Kurla Complex, Bandra (E), Mumbai - 400 051.
+
+##### E.	Expectations from the investors (Responsibilities of investors)
+<b>Do's</b>
+i.	Always deal with SEBI registered Investment Advisers.
+ii.	Ensure that the Investment Adviser has a valid registration certificate.
+iii.	Check for SEBI registration number. Please refer to the list of all SEBI registered Investment Advisers which is available on SEBI website in the following link: https://www.sebi.gov.in/sebiweb/other/OtherAction.do?doRecognisedFpi=yes&intmId=13)
+iv.	Pay only advisory fees to your Investment Adviser. Make payments of advisory fees through banking channels only and maintain duly signed receipts mentioning the details of your payments.
+v.	Always ask for your risk profiling before accepting investment advice. Insist that Investment Adviser provides advisory strictly on the basis of your risk profiling and take into account available investment alternatives.
+vi.	Ask all relevant questions and clear your doubts with your Investment Adviser before acting on advice.
+vii.	Assess the risk–return profile of the investment as well as the liquidity and safety aspects before making investments.
+viii.	Insist on getting the terms and conditions in writing duly signed and stamped. Read these terms and conditions carefully particularly regarding advisory fees, advisory plans, category of recommendations etc. before dealing with any Investment Adviser.
+ix.	Be vigilant in your transactions.
+x.	Approach the appropriate authorities for redressal of your doubts / grievances.
+xi.	Inform SEBI about Investment Advisers offering assured or guaranteed returns.
+
+<b>Don'ts</b>
+xii.	Don’t fall for stock tips offered under the pretext of investment advice.
+xiii.	Do not provide funds for investment to the Investment Adviser.
+xiv.	Don’t fall for the promise of indicative or exorbitant or assured returns by the Investment Advisers. Don’t let greed overcome rational investment decisions.
+xv.	Don’t fall prey to luring advertisements or market rumors.
+xvi.	Avoid doing transactions only on the basis of phone calls or messages from any Investment adviser or its representatives.
+xvii.	Don’t take decisions just because of repeated messages and calls by Investment Advisers.
+xviii.	Do not fall prey to limited period discount or other incentive, gifts, etc. offered by Investment advisers.
+xix.	Don’t rush into making investments that do not match your risk taking appetite and investment goals.
+xx.	Do not share login credential and password of your trading and demat accounts with the Investment Adviser.
+
+---
+
+#### Annexure B
+
+Month Ending: December 2021
+
+|Received From|Pending at end of last month|Received|Resolved|Total Pending|Pending > 3 months|Average Resolution time (days)|
+|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|
+|Investors|0|0|0|0|0|NA|NA|
+|SEBI|0|0|0|0|0|NA|NA|
+|Other Sources|0|0|0|0|0|NA|NA|
+|Grand Total|0|0|0|0|0|NA|NA|
+
+Trend of monthly disposal of Complaints
+|Month|Carried Forward from previous month|Received|Cummulative|Total Pending|
+|:---:|:---:|:---:|:---:|:---:|:---:|
+|April 2021|0|0|0|0|0|
+|May 2021|0|0|0|0|0|
+|June 2021|0|0|0|0|0|
+|July 2021|0|0|0|0|0|
+|August 2021|0|0|0|0|0|
+|September 2021|0|0|0|0|0|
+|October 2021|0|0|0|0|0|
+|November 2021|0|0|0|0|0|
+|December 2021|0|0|0|0|0|
+
+Trend of annual disposal of complaints
+|Year|Carried Forward from previous month|Received|Cummulative|Total Pending|
+|:---:|:---:|:---:|:---:|:---:|:---:|
+|FY 2018-19|0|0|0|0|0|
+|FY 2019-20|0|0|0|0|0|
+|FY 2020-21|0|0|0|0|0|
+
+---
+
 **Disclaimer for Website**
 
 The purpose of this website is to provide information only and the contents of this website do not constitute financial advice.
@@ -192,4 +286,3 @@ The information is selective and may not be complete or accurate for your partic
 Aditya does not give any warranty as to the accuracy, reliability or completeness of information which is contained in this website. Except insofar as any liability under statute cannot be excluded, Aditya does not accept any liability for any error or omission of any information on this website or for any resulting loss or damage suffered by the recipient or any other person.
 
 For your convenience, this website may contain hyperlinks to websites and servers maintained by third parties. Aditya does not control, evaluate, endorse or guarantee content found in those sites. Aditya does not assume any responsibility or liability for the actions, products, services and content of these sites or the parties that operate them. Your use of such sites is entirely at your own risk. Unless otherwise specified, copyright of information provided on this website is owned by Aditya. You may not alter or modify this information in any way.
-
