--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -183,13 +183,13 @@ Fax: sebisro@sebi.gov.in
 
 #### Annexure A
 
-###### Investor Charter in respect of Investment Adviser (IA)
+##### Investor Charter in respect of Investment Adviser (IA)
 
-##### A.	Vision and Mission Statements for investors
+##### A. Vision and Mission Statements for investors
 Vision: Invest with knowledge & safety.
 Mission: Every investor should be able to invest in right investment products based on their needs, manage and monitor them to meet their goals, access reports and enjoy financial wellness.
 
-##### B.	Details of business transacted by the Research Analyst with respect to the investors.
+##### B. Details of business transacted by the Research Analyst with respect to the investors.
 •	To enter into an agreement with the client providing all details including fee details, aspect of Conflict of interest disclosure and maintaining confidentiality of information.
 •	To do a proper and unbiased risk – profiling and suitability assessment of the client.
 •	To obtain registration with Know Your Client Registration Agency (KRA) and Central Know Your Customer Registry (CKYC).
@@ -200,22 +200,22 @@ Mission: Every investor should be able to invest in right investment products ba
 •	To deal with clients only from official number
 •	To maintain records of interactions, with all clients including prospective clients (prior to onboarding), where any conversation related to advice has taken place.
 
-##### C.	Details of services provided to investors (No Indicative Timelines)
+##### C. Details of services provided to investors (No Indicative Timelines)
 •	Onboarding of Clients
-o Sharing of agreement copy
-o Completing KYC of clients
+• Sharing of agreement copy
+• Completing KYC of clients
 •	Disclosure to Clients
-o To provide full disclosure about its business, affiliations, compensation in the agreement.
-o To not access client’s accounts or holdings for offering advice.
-o To disclose the risk profile to the client.
+• To provide full disclosure about its business, affiliations, compensation in the agreement.
+• To not access client’s accounts or holdings for offering advice.
+• To disclose the risk profile to the client.
 •	To provide investment advice to the client based on the risk-profiling of the clients and suitability of the client.
 
-##### D.	Details of grievance redressal mechanism and how to access it
+##### D. Details of grievance redressal mechanism and how to access it
 i.	In case of any grievance / complaint, an investor should approach the concerned Investment Adviser and shall ensure that the grievance is resolved within 30 days.
 ii.	If the investor’s complaint is not redressed satisfactorily, one may lodge a complaint with SEBI on SEBI’s 'SCORES' portal which is a centralized web based complaints redressal system. SEBI takes up the complaints registered via SCORES with the concerned intermediary for timely redressal. SCORES facilitates tracking the status of the complaint.
 iii.	With regard to physical complaints, investors may send their complaints to: Office of Investor Assistance and Education, Securities and Exchange Board of India, SEBI Bhavan, Plot No. C4-A, ‘G’ Block, Bandra-Kurla Complex, Bandra (E), Mumbai - 400 051.
 
-##### E.	Expectations from the investors (Responsibilities of investors)
+##### E. Expectations from the investors (Responsibilities of investors)
 <b>Do's</b>
 i.	Always deal with SEBI registered Investment Advisers.
 ii.	Ensure that the Investment Adviser has a valid registration certificate.
@@ -247,31 +247,31 @@ xx.	Do not share login credential and password of your trading and demat account
 Month Ending: December 2021
 
 |Received From|Pending at end of last month|Received|Resolved|Total Pending|Pending > 3 months|Average Resolution time (days)|
-|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|
-|Investors|0|0|0|0|0|NA|NA|
-|SEBI|0|0|0|0|0|NA|NA|
-|Other Sources|0|0|0|0|0|NA|NA|
-|Grand Total|0|0|0|0|0|NA|NA|
+|:---:|:---:|:---:|:---:|:---:|:---:|:---:|
+|Investors|0|0|0|0|NA|NA|
+|SEBI|0|0|0|0|NA|NA|
+|Other Sources|0|0|0|0|NA|NA|
+|Grand Total|0|0|0|0|NA|NA|
 
 Trend of monthly disposal of Complaints
 |Month|Carried Forward from previous month|Received|Cummulative|Total Pending|
-|:---:|:---:|:---:|:---:|:---:|:---:|
-|April 2021|0|0|0|0|0|
-|May 2021|0|0|0|0|0|
-|June 2021|0|0|0|0|0|
-|July 2021|0|0|0|0|0|
-|August 2021|0|0|0|0|0|
-|September 2021|0|0|0|0|0|
-|October 2021|0|0|0|0|0|
-|November 2021|0|0|0|0|0|
-|December 2021|0|0|0|0|0|
+|:---:|:---:|:---:|:---:|:---:|
+|April 2021|0|0|0|0|
+|May 2021|0|0|0|0|
+|June 2021|0|0|0|0|
+|July 2021|0|0|0|0|
+|August 2021|0|0|0|0|
+|September 2021|0|0|0|0|
+|October 2021|0|0|0|0|
+|November 2021|0|0|0|0|
+|December 2021|0|0|0|0|
 
 Trend of annual disposal of complaints
 |Year|Carried Forward from previous month|Received|Cummulative|Total Pending|
-|:---:|:---:|:---:|:---:|:---:|:---:|
-|FY 2018-19|0|0|0|0|0|
-|FY 2019-20|0|0|0|0|0|
-|FY 2020-21|0|0|0|0|0|
+|:---:|:---:|:---:|:---:|:---:|
+|FY 2018-19|0|0|0|0|
+|FY 2019-20|0|0|0|0|
+|FY 2020-21|0|0|0|0|
 
 ---
 
