--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -160,36 +160,19 @@ Please do send me an email, which is mentioned at the top of this web page. Intr
 
 ---
 
-####  Compliance Information
-
-##### SEBI Regional Office
-
-SEBI (Southern Regional Office)
-7th Floor, 756-L,
-Anna Salai,
-Chennai - 600002, Tamil Nadu
-
-Tel: +91-44- 28880222 / 28526686
-Fax: +91-44 -28880333
-Fax: sebisro@sebi.gov.in
-
-##### [SEBI SCORES](https://www.scores.gov.in/scores/Welcome.html)
-
-#### Principal Officer: Aditya G
-
-##### SEBI REG No: INA200011736
+###  Compliance Information
 
 ---
 
-#### Annexure A
+**Annexure A**
 
-##### Investor Charter in respect of Investment Adviser (IA)
+**Investor Charter in respect of Investment Adviser (IA)**
 
-##### A. Vision and Mission Statements for investors
+**A. Vision and Mission Statements for investors**
 Vision: Invest with knowledge & safety.
 Mission: Every investor should be able to invest in right investment products based on their needs, manage and monitor them to meet their goals, access reports and enjoy financial wellness.
 
-##### B. Details of business transacted by the Research Analyst with respect to the investors.
+**B. Details of business transacted by the Research Analyst with respect to the investors.**
 •	To enter into an agreement with the client providing all details including fee details, aspect of Conflict of interest disclosure and maintaining confidentiality of information.
 •	To do a proper and unbiased risk – profiling and suitability assessment of the client.
 •	To obtain registration with Know Your Client Registration Agency (KRA) and Central Know Your Customer Registry (CKYC).
@@ -200,7 +183,7 @@ Mission: Every investor should be able to invest in right investment products ba
 •	To deal with clients only from official number
 •	To maintain records of interactions, with all clients including prospective clients (prior to onboarding), where any conversation related to advice has taken place.
 
-##### C. Details of services provided to investors (No Indicative Timelines)
+**C. Details of services provided to investors (No Indicative Timelines)**
 •	Onboarding of Clients
 • Sharing of agreement copy
 • Completing KYC of clients
@@ -210,13 +193,13 @@ Mission: Every investor should be able to invest in right investment products ba
 • To disclose the risk profile to the client.
 •	To provide investment advice to the client based on the risk-profiling of the clients and suitability of the client.
 
-##### D. Details of grievance redressal mechanism and how to access it
+**D. Details of grievance redressal mechanism and how to access it**
 i.	In case of any grievance / complaint, an investor should approach the concerned Investment Adviser and shall ensure that the grievance is resolved within 30 days.
 ii.	If the investor’s complaint is not redressed satisfactorily, one may lodge a complaint with SEBI on SEBI’s 'SCORES' portal which is a centralized web based complaints redressal system. SEBI takes up the complaints registered via SCORES with the concerned intermediary for timely redressal. SCORES facilitates tracking the status of the complaint.
 iii.	With regard to physical complaints, investors may send their complaints to: Office of Investor Assistance and Education, Securities and Exchange Board of India, SEBI Bhavan, Plot No. C4-A, ‘G’ Block, Bandra-Kurla Complex, Bandra (E), Mumbai - 400 051.
 
-##### E. Expectations from the investors (Responsibilities of investors)
-<b>Do's</b>
+**E. Expectations from the investors (Responsibilities of investors)**
+_Do's_
 i.	Always deal with SEBI registered Investment Advisers.
 ii.	Ensure that the Investment Adviser has a valid registration certificate.
 iii.	Check for SEBI registration number. Please refer to the list of all SEBI registered Investment Advisers which is available on SEBI website in the following link: https://www.sebi.gov.in/sebiweb/other/OtherAction.do?doRecognisedFpi=yes&intmId=13)
@@ -229,7 +212,7 @@ ix.	Be vigilant in your transactions.
 x.	Approach the appropriate authorities for redressal of your doubts / grievances.
 xi.	Inform SEBI about Investment Advisers offering assured or guaranteed returns.
 
-<b>Don'ts</b>
+_Don'ts_
 xii.	Don’t fall for stock tips offered under the pretext of investment advice.
 xiii.	Do not provide funds for investment to the Investment Adviser.
 xiv.	Don’t fall for the promise of indicative or exorbitant or assured returns by the Investment Advisers. Don’t let greed overcome rational investment decisions.
@@ -242,9 +225,9 @@ xx.	Do not share login credential and password of your trading and demat account
 
 ---
 
-#### Annexure B
+** Annexure B **
 
-Month Ending: December 2021
+_Month Ending: December 2021_
 
 |Received From|Pending at end of last month|Received|Resolved|Total Pending|Pending > 3 months|Average Resolution time (days)|
 |:---:|:---:|:---:|:---:|:---:|:---:|:---:|
@@ -253,7 +236,7 @@ Month Ending: December 2021
 |Other Sources|0|0|0|0|NA|NA|
 |Grand Total|0|0|0|0|NA|NA|
 
-Trend of monthly disposal of Complaints
+_Trend of monthly disposal of Complaints_
 |Month|Carried Forward from previous month|Received|Cummulative|Total Pending|
 |:---:|:---:|:---:|:---:|:---:|
 |April 2021|0|0|0|0|
@@ -266,12 +249,24 @@ Trend of monthly disposal of Complaints
 |November 2021|0|0|0|0|
 |December 2021|0|0|0|0|
 
-Trend of annual disposal of complaints
+_Trend of annual disposal of complaints_
 |Year|Carried Forward from previous month|Received|Cummulative|Total Pending|
 |:---:|:---:|:---:|:---:|:---:|
 |FY 2018-19|0|0|0|0|
 |FY 2019-20|0|0|0|0|
 |FY 2020-21|0|0|0|0|
+
+---
+
+** Annexure C **
+
+Client’s queries / complaints may arise due to lack of understanding or a deficiency of service experienced by clients. Deficiency of service may include lack of explanation, clarifications, understanding which escalates into shortfalls in the expected delivery standards, either due to inadequacy of facilities available or through the attitude of staff towards client.
+
+1.	Clients can seek clarification to their query and are further entitled to make a complaint in writing, orally or telephonically. An email may be sent to me at <b>INFO <i>[at]</i> PANTHERACAPITAL <i>[dot]</i> IN</b>.
+2.	A letter may also be written with their query/complaint and posted at address: New 2 Old 75, 2nd St, Karpagam Avenue, R A Puram, Chennai 600 028
+3.	Clients can write to the Investment Adviser at <b>INFO <i>[at]</i> PANTHERACAPITAL <i>[dot]</i> IN</b>, if the Investor does not receive a response within 10 business days of writing to the Client Servicing Team. The client can expect a reply within 10 business days of approaching the Investment Advisor.
+4.	In case you are not satisfied with our response you can lodge your grievance with SEBI at [SCORES](http://scores.gov.in) or you may also write to any of the offices of SEBI. SCORES may be accessed thorough SCORES mobile application as well, same can be downloaded from below [link](https://play.google.com/store/apps/details?id=com.ionicframework.sebi236330)
+
 
 ---
 
