--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -1,7 +1,7 @@
 <script src="https://rawcdn.githack.com/oscarmorrison/md-page/master/md-page.js"></script><noscript>
-# aditya g
+# Aditya G
 
-### *Fiduciary with a difference*
+### *Fiduciary with a Difference*
 
 #### SEBI Reg No: INA200011736
 
@@ -13,6 +13,8 @@
 |At the beginning of the month|	Received during the month|Resolved during the month|Pending at the end of the month|Reasons for pendency|
 |:---:|:---:|:---:|:---:|:---:|
 |0|0|0|0|N/A|
+
+For the more compliance information, please scroll down towards end of this website.
 
 ---
 
@@ -162,10 +164,11 @@ Please do send me an email, which is mentioned at the top of this web page. Intr
 
 ###  Compliance Information
 
-
 **Annexure A**
 
 **Investor Charter in respect of Investment Adviser (IA)**
+
+[Requirements vide SEBI circular SEBI/HO/IMD/IMD-II CIS/P/CIR/2021/0686 dated December 13, 2021]
 
 **A. Vision and Mission Statements for investors**
 Vision: Invest with knowledge & safety.
