--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -90,7 +90,7 @@ It is likely you're referring to "distributors" such as bank relationship manage
 
 **So, who are distributors?**
 
-They SELL financial products for "free", hence, they do not charge you directly. Instead, they earn COMMISSIONS on the products they sell from product orginators (i.e. mutual funds, PMS, AIFs, etc), instead of you. In other words, you are actually paying distributors vis-a-vis product originator, not directly to them! Distributors are NOT fiducaries. Remember, there is no such thing as free lunch!
+They SELL financial products for "free", hence, they do not charge you directly. Instead, they earn COMMISSIONS on the products they sell from product orginators (i.e. mutual funds, PMS, AIFs, etc), instead of you. In other words, you are actually paying distributors vis-a-vis product originator, not directly to them! Distributors are NOT fiducaries, they are SALES people. Remember, there is no such thing as free lunch!
 
 **Are your fees negotiable?**
 
@@ -102,7 +102,7 @@ Good question! A lot of clients do not know what it looks like and it's importan
 
 **Is there a minimum threshold required to be your client?**
 
-Yes. Transparency, effort, and willingness to pay for specialised service. Yet, before you become a client, we will assess each other to see if we can be a good fit. If a patient does not allow the doctor to diagnose the problem, the doctor cannot be expected to treat the patient. And the patient cannot expect the diagnosis to be free, nevermind the procedure (if any). The same principle applies in case of fiduciary-client relationship. The client will have to tell me the issues and I will assess if I can solve those. And must be willing to pay.
+Yes. Transparency, effort, and willingness to pay for specialised service. Yet, before you become a client, we will assess each other to see if we can be a good fit. If a patient does not allow the doctor to diagnose the problem, the doctor cannot be expected to treat the patient. And the patient cannot expect the diagnosis to be free, nevermind the procedure (if any). The same principle applies in case of fiduciary-client relationship. The client will have to tell me the issues and I will assess if I can solve those. Last but not the least, the client must be willing to pay for the service.
 
 **Can you tell me about your conflicts of interest, orally and in writing?**
 
@@ -110,11 +110,11 @@ Of course. Every advisor, regardless of business model or form of compensation, 
 
 **Do you earn fees as adviser to a private fund or other investments that you may recommend to clients?**
 
-I do not serve as an adviser to any third party product originator. I could recommend such products based on the client’s profile and check if the it is suitable to the client’s temperament and investment goals. However, I do not sell products or earn any commissions from any product originator. You will have to buy from a financial distributor.
+I do not serve as an adviser to any third party product originator. I could recommend such products based on the client’s profile and check if the it is suitable to the client’s temperament and investment goals. However, I do not sell products or earn any commissions from any product originator. You will have to buy from a financial distributor or buy directly from the product originator.
 
 **Do you pay referral fees to generate new clients?**
 
-No. I have good relationships with many advisors, distributors, lawyers, chartered accountants, asset managers, and potential clients. Sometimes they might refer clients to me. Sometimes, I refer clients to them. But nothing is exchanged between us.
+No. I have good relationships with many advisors, distributors, lawyers, chartered accountants, asset managers, and potential clients. Sometimes they might refer clients to me. Sometimes, I refer clients to them. But nothing is exchanged between us. It's a fiduciary approach with the client's best interest at heart.
 
 **Do you earn fees for referring clients to specialists like estate attorneys or insurance agents?**
 
@@ -126,7 +126,7 @@ Each person’s investment philosophy is distinct and will depend on his/her per
 
 **Do you believe in technical analysis or market timing?**
 
-For some investors this approach works very well. While I'm mostly a fundamental investor, I believe there will be certain situations in the markets that will warrant technical analysis approach, given the right temperament. I have tried it a few times and it seems to work just fine. But I haven't tried it substantially enough to endorse it over other approaches. As far as market timing is considered, I believe in it because future returns is a function of how much you paid for an asset. If you buy an overpriced asset, the chances that your future returns will be less will be far greater, and vice versa.
+For some investors this approach works very well. While mostly follow the fundamental approach, I believe there will be certain situations in the markets that will warrant technical analysis approach, given the right conditions. I have tried it a few times and it seems to work just fine. As far as market timing is considered, I believe in it because future returns is a function of how much you paid for an asset. If you buy an overpriced asset, the chances that your future returns will be less will be far greater, and vice versa.
 
 **Do you believe you can beat the market?**
 
@@ -134,15 +134,15 @@ There are some investment managers who possess alpha, or market-beating skills, 
 
 **How often do you trade?**
 
-I set aside a small corpus for trading purposes, for my own sanity and happiness. It keeps my grey cells busy. However, as part of my investment advisory, trading is something I do not really advise, unless one has a strong risk appetite and doesn't mind risking capital. If anyone wishes to trade, I would recommend starting off with a small corpus.
+I set aside a small corpus for trading purposes, for my own sanity and happiness. It keeps my grey cells busy and helps me keep tabs at current events. However, as part of my investment advisory, trading is something I do not really advise, unless one has a strong risk appetite and doesn't mind risking capital. If anyone wishes to trade, I would recommend starting off with a small corpus.
 
 **What software do you use?**
 
-Great advisors tend not to rely on software. A simple paper & pen does the job of reporting far better than any computer software (the so called 'napkin theory'), and this is my standard approach, because clients learn and understand better this way. Moreover, writing stuff down reinforces our brain and helps us process information far more effectively than a computer software. Needless, if you insist on using software then good financial management requires nothing more than a spreadsheet or any open source software. You do not need any fancy software to implement sound financial advice.
+Great advisors keep things simple. A simple paper & pen does the job of reporting far better than any computer software (the so called 'napkin theory'), and this is my standard approach, because clients learn and understand better this way. Moreover, writing stuff down reinforces our brain and helps us process information far more effectively than a computer software. Needless, if you insist on using software then good financial management requires nothing more than a spreadsheet or any open source software. You do not need any fancy software to implement sound financial advice.
 
 **Which professional credentials do you have, and what are their requirements?**
 
-I have a Certified Financial Planner (CFP) designation, which is the gold standard for wealth management and financial planning, and one of the requirements of being a SEBI-registered Financial Adviser. Thus, there are strict compliance requirements with regards to both CFP designation as well as statutory rules prescribed by SEBI. I have also done my MBA with specialisation in finance & economics, and have completed several wealth management courses from institutes in New York.
+I have a Certified Financial Planner (CFP) designation, which is the gold standard for wealth management and financial planning, and one of the requirements of being a SEBI-registered Financial Adviser. Thus, there are strict compliance requirements with regards to both CFP designation as well as statutory rules prescribed by SEBI. I have also done my MBA with specialisation in finance & economics, and have completed several wealth management courses from institutes in New York. You can check my [LinkedIn profile](https://www.linkedin.com/in/adityago/) for more details.
 
 **After inflation, taxes and fees, what is a reasonable estimated return on my portfolio over the long term?**
 
@@ -150,11 +150,11 @@ Of course, it depends. But most people should expect nominal (before-inflation) 
 
 **Who manages your money?**
 
-I do. Actually, I manage my entire family’s assets. It is reasonable to have assets managed by a third party, just to keep my biases in check. For this reason, I have diversified our various portfolios to different asset managers, each having their own unique philosophy. Additionally, a part of our portfolio is directly managed by me. This twin approach helps me achieve two objectives: the first approach helps me refine my own thought process which can help me service clients; the second approach helps me have the skin in the game. Both are absolutely critical for understanding the nature of financial advice.
+I do. Actually, I manage my entire family’s assets. It is reasonable to have assets managed by a third party, just to keep my biases in check. For this reason, I have diversified our various portfolios to different asset managers, each having their own unique philosophy. Additionally, a part of our portfolio is directly managed by me. This twin approach helps me achieve two objectives: the first objective helps me refine my own thought process which can help me service clients; the second objective helps me have the skin in the game. Both are absolutely critical for understanding the nature of financial advice.
 
-**Why is your website so plain?**
+**Why is your website plaintext?**
 
-My profession is that of a financial advisor, not a website designer (although I do have HTML/CSS/Front-end website skills). My job is to solve your financial problems and make you a smarter and confident investor -- period. Secondly, I love plain-text websites because they use less resources (which is good for the planet) and require less maintenance (so I can devote time to solving your problems instead of worrying about cosmetics). Lastly, I believe in simplicity. Simplicity is the backbone of my advisory and the reason people come to me. And this website reflects that.
+I'm a big fan of plaintext websites, as it uses less resources (which is good for the planet!) and easier to maintain by myself. I like to keep things simple. Also, I love Github. Moreover, my job is to solve your financial problems and make you a smarter and confident investor -- period. Simplicity is the backbone of my advisory and the reason people come to me, and this website is a reflection of how powerful simplicity can be. 
 
 **How do I contact you?**
 
