--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -154,7 +154,7 @@ I do. Actually, I manage my entire family’s assets. It is reasonable to have a
 
 **Why is your website plaintext?**
 
-I'm a big fan of plaintext websites, as it uses less resources (which is good for the planet!) and easier to maintain by myself. I like to keep things simple. Also, I love Github. Moreover, my job is to solve your financial problems and make you a smarter and confident investor -- period. Simplicity is the backbone of my advisory and the reason people come to me, and this website is a reflection of how powerful simplicity can be. 
+I'm a big fan of plaintext websites, as it uses less resources (which is good for the planet!) and easier to maintain by myself. I like to keep things simple. Also, I love Github. Moreover, my job is to solve your financial problems and make you a smarter and confident investor -- period. Simplicity is the backbone of my advisory and the reason people come to me, and this website is a reflection of how powerful simplicity can be.
 
 **How do I contact you?**
 
@@ -174,7 +174,7 @@ Please do send me an email, which is mentioned at the top of this web page. Intr
 Vision: Invest with knowledge & safety.
 Mission: Every investor should be able to invest in right investment products based on their needs, manage and monitor them to meet their goals, access reports and enjoy financial wellness.
 
-**B. Details of business transacted by the Research Analyst with respect to the investors.**
+**B. Details of business transacted by the Investment Adviser with respect to the investors.**
 •	To enter into an agreement with the client providing all details including fee details, aspect of Conflict of interest disclosure and maintaining confidentiality of information.
 •	To do a proper and unbiased risk – profiling and suitability assessment of the client.
 •	To obtain registration with Know Your Client Registration Agency (KRA) and Central Know Your Customer Registry (CKYC).
@@ -182,14 +182,14 @@ Mission: Every investor should be able to invest in right investment products ba
 •	To disclose the status of complaints in its website.
 •	To disclose the name, proprietor name, type of registration, registration number, validity, complete address with telephone numbers and associated SEBI regional/local Office details in its website.
 •	To employ only qualified and certified employees.
-•	To deal with clients only from official number
+•	To deal with clients only from official number.
 •	To maintain records of interactions, with all clients including prospective clients (prior to onboarding), where any conversation related to advice has taken place.
 
-**C. Details of services provided to investors (No Indicative Timelines)**
-•	Onboarding of Clients
-• Sharing of agreement copy
-• Completing KYC of clients
-•	Disclosure to Clients
+**C. Details of services provided to investors**
+•	Onboarding of Clients.
+• Sharing of agreement copy.
+• Completing KYC of clients.
+•	Disclosure to Clients.
 • To provide full disclosure about its business, affiliations, compensation in the agreement.
 • To not access client’s accounts or holdings for offering advice.
 • To disclose the risk profile to the client.
@@ -204,7 +204,7 @@ Mission: Every investor should be able to invest in right investment products ba
 <i>Do's</i>
 •	Always deal with SEBI registered Investment Advisers.
 •	Ensure that the Investment Adviser has a valid registration certificate.
-•	Check for SEBI registration number. Please refer to the list of all SEBI registered Investment Advisers which is available on SEBI website in the following link: https://www.sebi.gov.in/sebiweb/other/OtherAction.do?doRecognisedFpi=yes&intmId=13)
+•	Check for SEBI registration number. Please refer to the list of all SEBI registered Investment Advisers which is available on SEBI website in the following link: https://www.sebi.gov.in/sebiweb/other/OtherAction.do?doRecognisedFpi=yes&intmId=13).
 •.	Pay only advisory fees to your Investment Adviser. Make payments of advisory fees through banking channels only and maintain duly signed receipts mentioning the details of your payments.
 •	Always ask for your risk profiling before accepting investment advice. Insist that Investment Adviser provides advisory strictly on the basis of your risk profiling and take into account available investment alternatives.
 •	Ask all relevant questions and clear your doubts with your Investment Adviser before acting on advice.
