--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -252,7 +252,7 @@ Mission: Every investor should be able to invest in right investment products ba
 |December 2021|0|0|0|0|
 
 <i>Trend of annual disposal of complaints</i>
-|Year|Carried Forward from previous month|Received|Cummulative|Total Pending|
+|Year|Carried Forward from previous year|Received|Cummulative|Total Pending|
 |:---:|:---:|:---:|:---:|:---:|
 |FY 2018-19|0|0|0|0|
 |FY 2019-20|0|0|0|0|
