--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -204,7 +204,7 @@ Mission: Every investor should be able to invest in right investment products ba
 <i>Do's</i>
 •	Always deal with SEBI registered Investment Advisers.
 •	Ensure that the Investment Adviser has a valid registration certificate.
-•	Check for SEBI registration number. Please refer to the list of all SEBI registered Investment Advisers which is available on SEBI website in the following link: https://www.sebi.gov.in/sebiweb/other/OtherAction.do?doRecognisedFpi=yes&intmId=13).
+•	Check for SEBI registration number. Please refer to the list of all SEBI registered Investment Advisers which is available on SEBI website in the following link: [Investment Advisers](https://www.sebi.gov.in/sebiweb/other/OtherAction.do?doRecognisedFpi=yes&intmId=13).
 •.	Pay only advisory fees to your Investment Adviser. Make payments of advisory fees through banking channels only and maintain duly signed receipts mentioning the details of your payments.
 •	Always ask for your risk profiling before accepting investment advice. Insist that Investment Adviser provides advisory strictly on the basis of your risk profiling and take into account available investment alternatives.
 •	Ask all relevant questions and clear your doubts with your Investment Adviser before acting on advice.
