--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -143,7 +143,7 @@ I do. Actually, I manage my entire family’s assets. It is reasonable to have a
 
 **Why is your website plaintext?**
 
-I'm a big fan of plaintext websites, as it uses less resources (which is good for the planet!) and easier to maintain by myself. I like to keep things simple. Also, I love Github. Moreover, my job is to solve your financial problems and make you a smarter and confident investor -- period. Simplicity is the backbone of my advisory and the reason people come to me, and this website is a reflection of how powerful simplicity can be.
+I'm a big fan of the [plaintext movement](https://plaintextproject.online). I like to keep things simple. Also, I love Github (where this website is hosted). Simplicity is the backbone of my advisory and the reason people come to me, and this website is a reflection of how powerful simplicity can be.
 
 **How do I contact you?**
 
