--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -61,17 +61,19 @@ No. Like I said earlier, I do not sell products. I’m in the fiduciary business
 
 I charge one of the following fee models:
 
-1) Simple no-nonsense flat fee. The amount depends on the complexity of the client's requirements. The more complex, the higher the fees. Check the next question for more details.
+1) Simple no-nonsense flat fee. The amount depends on the complexity of the client's requirements. Higher complexity means higher the fees and vice versa.
 
-2) Maximum of 1% of Asset under Advisory (AuA)
+2) Maximum of 1% of Asset under Advisory (AuA). The minimum threshold is INR 1,25,00,000.
 
 **Can I choose which fee model to opt for? And can you tell me what is offered under each?**
 
 Yes. You can.
 
-a) If you opt for flat fee model, the nature of advisory will be "unstructured" and broad. In other words, it will be GENERAL financial advisory that spans a range of queries you may have. You do not have to disclose your networth and details of your financial holdings. However, if you seek SPECIFIC wealth solutions, it is suggested you opt for AuA model.
+a) If you opt for flat fee model, the nature of advisory will be "unstructured" and involve wide-ranging queries but nothing specific.
 
-b) If you opt for AuA model, the nature of advisory will be "structured", SPECIFIC, and HOLISTIC. You will have to disclose an audited networth statement which will help me assess your financial wellbeing. Once assessed, I will prepare a comprehensive financial plan fine-tuned to your goals and aspirations. There will also be granular asset allocation and rebalancing, detailed investment policy statement, scenario planning, tax planning, behavioural coaching, and so on. There are a whole range of tools and system which I will deploy to help you become more aware and confident about your financial well being. All this requires committment from both you and me, and it's worth the effort.
+b) If you opt for AuA model, the nature of advisory will be "structured", specific, and holistic. You will have to disclose an audited networth statement which will help me assess your financial wellbeing. Once assessed, I will prepare a comprehensive financial plan fine-tuned to your goals and aspirations. There will also be granular asset allocation and rebalancing, detailed investment policy statement, scenario planning, tax planning, behavioural coaching, and so on. There are a whole range of tools and approaches which I will deploy to help you become more aware of your financial aspirations which will also increase your confidence.
+
+Regardless of the fee type, it will require committment from both you and me.
 
 **I have met "advisors" who do not charge a fee. Can you tell me more about this?**
 
@@ -123,11 +125,7 @@ There are some investment managers who possess alpha, or market-beating skills, 
 
 **How often do you trade?**
 
-I set aside a small corpus for trading purposes, for my own sanity and happiness. It keeps my grey cells busy and helps me keep tabs at current events. However, as part of my investment advisory, trading is something I do not really advise, unless one has a strong risk appetite and doesn't mind risking capital. If anyone wishes to trade, I would recommend starting off with a small corpus.
-
-**What software do you use?**
-
-Great advisors keep things simple. A simple paper & pen does the job of reporting far better than any computer software (the so called 'napkin theory'), and this is my standard approach, because clients learn and understand better this way. Moreover, writing stuff down reinforces our brain and helps us process information far more effectively than a computer software. Needless, if you insist on using software then good financial management requires nothing more than a spreadsheet or any open source software. You do not need any fancy software to implement sound financial advice.
+Quite regularly. I trade for my own sanity and happiness. It keeps my grey cells busy and helps me keep tabs at current events. However, as part of my investment advisory, trading is something I do not really advise, unless one has a strong risk appetite and doesn't mind risking capital. If anyone wishes to trade, I would recommend starting off with a small corpus, maybe 1% of investible assets before scaling up.
 
 **Which professional credentials do you have, and what are their requirements?**
 
@@ -151,7 +149,7 @@ Please do send me an email, which is mentioned at the top of this web page. Intr
 
 ---
 
-###  Compliance Information
+###  Compliance Information (as required by the statute)
 
 #### Number of Complaints (as on 31st December 2021)
 [Compliance Requirement As per SEBI circular [SEBI/HO/IMD/DF1/CIR/P/2019/169](https://www.sebi.gov.in/legal/circulars/dec-2019/measures-to-strengthen-the-conduct-of-investment-advisers-ia-_45490.html) dated December 27, 2019]
@@ -289,7 +287,7 @@ SEBI REG No: INA200011736
 
 **Disclosure**
 
-I, Aditya G, am a Securities and Exchange Board of India (SEBI) registered independent adivosr (Regd. No. INA200011736). I own various assets and equities which may be mentioned from time to time either during the advisory process or outside of it. The views expressed in my advisory practice reflect my personal opinion about the referenced securities and issuers and/or other subject matter as appropriate. The insight does not contain and is not based on any non-public, material information. To the best of my knowledge, the views expressed in this insight comply with Indian law as well as applicable law in the country from which it is posted. I have not been commissioned to write this insight or hold any specific opinion on the securities referenced therein. This insight is for informational purposes only and is not intended to provide financial, investment or other professional advice. It should not be construed as an offer to sell, a solicitation of an offer to buy, or a recommendation for any security. Any such conflict of interest will be explicitly disclosed during time of dispensation of advisory. 
+I, Aditya G, am a Securities and Exchange Board of India (SEBI) registered independent adivosr (Regd. No. INA200011736). I own various assets and equities which may be mentioned from time to time either during the advisory process or outside of it. The views expressed in my advisory practice reflect my personal opinion about the referenced securities and issuers and/or other subject matter as appropriate. The insight does not contain and is not based on any non-public, material information. To the best of my knowledge, the views expressed in this insight comply with Indian law as well as applicable law in the country from which it is posted. I have not been commissioned to write this insight or hold any specific opinion on the securities referenced therein. This insight is for informational purposes only and is not intended to provide financial, investment or other professional advice. It should not be construed as an offer to sell, a solicitation of an offer to buy, or a recommendation for any security. Any such conflict of interest will be explicitly disclosed during time of dispensation of advisory.
 
 ---
 
